# gaeb-toolkit

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: export.rs  inline_png.rs  layout_reference_cleanup.rs  lib.rs  main.rs  model.rs  parser.rs  parser_v2.rs  pdf_cleanup.rs  placeholder_oz.rs  price_cleanup.rs  priced_export.rs  provisional_validation.rs  provisional_xml.rs  reference_cleanup.rs  title_cleanup.rs  x83.rs
src/gaeb_toolkit/: __init__.py  cli.py  exporters.py  model.py  parser.py
tests/: test_parser.py
